--- a/sipxpbx/firewall/firewall.properties
+++ b/sipxpbx/firewall/firewall.properties
@@ -1,11 +1,11 @@
-sysctl.label=Settings
-sysctl.icmp_echo_ignore_broadcasts.label=Disable response to broadcasts
-sysctl.icmp_echo_ignore_broadcasts.description=Ignore all ICMP ECHO and TIMESTAMP requests sent to it via broadcast/multicast
-sysctl.tcp_syncookies.label=Denial of Service (DOS) attacks
-sysctl.tcp_syncookies.description=Enable syn cookies (prevent against the common 'syn flood attack')
-sysctl.log_martians.label=Log spoofed, source routed and redirect packets
-sysctl.log_martians.description=Log packets with impossible addresses to kernel log
-sys.unmanaged.label=Unmanaged Firewall service
-sys.unmanaged.description=Enable this option if you don't want firewall service to be managed by unified communication system \
-(for e.g. generating configuration, automatic restart of services).
-sys.label=Configuration Control
+sysctl.label=Einstellungen
+sysctl.icmp_echo_ignore_broadcasts.label=Deaktive Antwort auf Broadcasts
+sysctl.icmp_echo_ignore_broadcasts.description=Ignoriere alle ICMP ECHO und TIMESTAMP Anfragen, welche von Broadcast/Multicast geschickt werden.
+sysctl.tcp_syncookies.label=Denial of Service (DOS) Attacken
+sysctl.tcp_syncookies.description=Aktiviere syn cookies (sch\u00FCtzen vor 'syn flood attacken')
+sysctl.log_martians.label=Log ausgesp\u00E4ht, source routed und Packete weitergeleitet
+sysctl.log_martians.description=Logge Pakete mit nicht m\u00F6glichen Adressen in den Kernel Log
+sys.unmanaged.label=Nicht verwalteter Firewall Service
+sys.unmanaged.description=Aktivieren Sie diese Option, falls Sie nicht wollen, dass der Firewall Service von Unified Communication System verwaltet wird \
+(f\u00FCr z.B. Konfiguration erstellen, automatischen Neustart des Services).
+sys.label=Konfigurations Kontrolle
