--- a/sipxpbx/ftp/ftp.properties
+++ b/sipxpbx/ftp/ftp.properties
@@ -1,26 +1,26 @@
 #Created by JInto - www.guh-software.de
 #Wed Jun 27 14:32:55 EEST 2012
 vsftp-config.label=FTP Server (VSFTP)
-vsftp-config.pasv_address.label=Passive Address
-vsftp-config.pasv_address.description=Provide a numeric IP address, unless Resolve Passive Address option is enabled, \
-in which case you can provide a hostname which will be DNS resolved for you at startup.
-vsftp-config.pasv_addr_resolve.label=Resolve Passive Address
-vsftp-config.pasv_addr_resolve.description=Check this option if you want to use a hostname in the Passive Address option.
-vsftp-config.pasv_min_port.label=Passive Minimum Port
-vsftp-config.pasv_min_port.description=The minimum port to allocate for PASV style data connections.
-vsftp-config.pasv_max_port.label=Passive Maximum Port
-vsftp-config.pasv_max_port.description=The maximum port to allocate for PASV style data connections.
-vsftp-config.syslog_enable.description=If enabled, then any log output which would have gone to /var/log/vsftpd.log goes to the system log instead.
+vsftp-config.pasv_address.label=Passive Adresse
+vsftp-config.pasv_address.description=Geben Sie eine numerische IP Adresse an, solange nicht die Resolve Passive Adresse aktiviert ist, \
+in dem Fall k\u00F6nnen Sie einen Hostnamen angeben, welcher für Sie beim Start DNS aufgel\u00F6st wird.
+vsftp-config.pasv_addr_resolve.label=Resolve Passive Adresse
+vsftp-config.pasv_addr_resolve.description=Aktivieren Sie diese Option, falls Sie einen Hostnamen in der Passiven Adresse benutzen wollen.
+vsftp-config.pasv_min_port.label=Passiver Minimal Port
+vsftp-config.pasv_min_port.description=Der minimale Port, reserviert für PASV style Datenverbindungen.
+vsftp-config.pasv_max_port.label=Passiver Maximal Port
+vsftp-config.pasv_max_port.description=Der maximale Port, reserviert für PASV stye Datenverbindungen.
+vsftp-config.syslog_enable.description=Falls aktiviert, wird jede Log Ausgabe, welche normalerweise in /var/log/vsftpd.log geschrieben worden w\u00E4re, in die System Log geschrieben.
 vsftp-config.syslog_enable.label=System Log
-vsftp-config.xferlog_enable.description=If enabled, a log file will be maintained detailing uploads and downloads.
+vsftp-config.xferlog_enable.description=Falls aktiviert, wird ein Log File mit detailierten Angaben über Upload und Download erstellt.
 vsftp-config.xferlog_enable.label=Transfer Log
-vsftp-config.reverse_lookup_enable.label=Enable Reverse Lookup
-vsftp-config.reverse_lookup_enable.description=Use DNS to reverse lookup host names with IP addresses.  Rarely useful for phone sets.
-vsftp-config.anonymous_enable.label=Permit Anonymous Logins
-vsftp-config.anonymous_enable.description=Controls whether anonymous logins are permitted or not. If enabled, both the usernames ftp and anonymous are recognized as anonymous logins.
-vsftp-config.anon_upload_enable.label=Permit Anonymous Uploads
-vsftp-config.anon_upload_enable.description=If set to YES, anonymous users will be permitted to upload files under certain conditions. For this to work, the option write_enable must be activated, and the anonymous ftp user must have write permission on desired upload locations.
-vsftp-config.anon_mkdir_write_enable.label=Permit Anonymous Create Directories
-vsftp-config.anon_mkdir_write_enable.description=If set to YES, anonymous users will be permitted to create new directories under certain conditions. For this to work, the option write_enable must be activated, and the anonymous ftp user must have write permission on the parent directory.
-vsftp-config.anon_other_write_enable.label=Permit Anonymous Write Operations
-vsftp-config.anon_other_write_enable.description=If set to YES, anonymous users will be permitted to perform write operations other than upload and create directory, such as deletion and renaming. This is generally not recommended.
+vsftp-config.reverse_lookup_enable.label=Aktivier Reverse Lookup
+vsftp-config.reverse_lookup_enable.description=Benutze DNS um Hostnamen mit IP Adressen abzugleichen mit Hilfe von Reverse Lookup. Selten n\u00FCtzlich für Telefon Sets.
+vsftp-config.anonymous_enable.label=Erlaube anonymen Login
+vsftp-config.anonymous_enable.description=Kontrolliert ob anonyme Logins erlaubt sind, oder nicht. Falls aktiviert,werden sowohl der Benutzername FTP als auch Anonymous als Anonym erkannt.
+vsftp-config.anon_upload_enable.label=Erlaube anonyme Uploads
+vsftp-config.anon_upload_enable.description=Falls auf Ja gesetzt, wird es anonymen Benutzern unter bestimmten Umst\u00E4nden erlaubt, eine Datei hochzuladen. Damit dies funktioniert, muss die Funktion write_enable aktiviert sein und der anonyme Benutzer muss Schreibrechte in der gew\u00FCnschten Upload Stelle haben.
+vsftp-config.anon_mkdir_write_enable.label=Erlaube Anonym Ordner zu erstellen
+vsftp-config.anon_mkdir_write_enable.description=Falls auf Ja gesetzt, wird es anonymen Benutzern erlaubt neue Ordner zu erstellen unter bestimmten Umst\u00E4nden. Dsmit dies funktioniert, muss die Option write_enable aktiviert sein und der anonyme Benutzer muss Schreibrechte in der gew\u00FCnschten Upload Stelle haben.
+vsftp-config.anon_other_write_enable.label=Erlaube anonyme Schreib Aktionen
+vsftp-config.anon_other_write_enable.description=Wenn auf JA gesetzt, wird anonymen Benutzern erlaubt Schreiboperationen abgesehn von Upload und Ordner erstellen durchzuf\u00FChren, wie L\u00F6schen und Umbenennen. Dies wird generell nicht empfohlen.
