--- a/sipxpbx/moh/moh.properties
+++ b/sipxpbx/moh/moh.properties
@@ -1,8 +1,8 @@
-moh-config.MOH_SOURCE.label=Music On Hold Source
-moh-config.MOH_SOURCE.description=Selects the source of the on hold music. If set to <em>System Music Directory</em> the server \
-  will play all the music files from the system directory on a continuous rotating basis. \
-  Setting it to <em>Sound Card</em> will stream audio from the local sound card. \
-  <em>None</em> option will disable music on hold.
-moh-config.MOH_SOURCE.label.FILES_SRC=System Music Directory
-moh-config.MOH_SOURCE.label.SOUNDCARD_SRC=Sound Card
-moh-config.MOH_SOURCE.label.NONE=None
+moh-config.MOH_SOURCE.label=Warteschlangen Musik Quelle
+moh-config.MOH_SOURCE.description=W\u00E4hlen Sie die Quelle der Warteschlangen Musik aus. Wenn auf <em>System Musik Ordner</em> gesetzt, wird der Server \
+  ale Musikdateien aus dem System Ordner in einer Endlos Zufalls Schleife abspielen. \
+  Wenn auf <em>Sound Karte</em> gesetzt, wird der Ton von der lokalen Sound Karte gestreamt. \
+  <em>Keine</em> Option, schaltet diese Option aus.
+moh-config.MOH_SOURCE.label.FILES_SRC=System Musik Verzeichnis
+moh-config.MOH_SOURCE.label.SOUNDCARD_SRC=Sound Karte
+moh-config.MOH_SOURCE.label.NONE=Keine
