--- a/sipxpbx/ntp/ntp.properties
+++ b/sipxpbx/ntp/ntp.properties
@@ -1,27 +1,27 @@
 ntp-config.label=NTP Service
-ntp-config.local-clock.label=Enable local clock
-ntp-config.local-clock.description=The local clock is no reference clock in reality; instead it simply refers to the system time on the current machine.
+ntp-config.local-clock.label=Aktiviere lokale Uhr
+ntp-config.local-clock.description=Die loakale Uhr ist keine Referenz Uhr in der Realit\u00E4t; stattdessen verweist sie nur auf die System Zeit auf der aktuellen Maschine.
 ntp-config.server-0.label=NTP server
-ntp-config.server-1.label=Additional NTP server
-ntp-config.server-2.label=Additional NTP server
-ntp-config.server-3.label=Additional NTP server
-ntp-config.provide-time.label=Provide time for other systems
-ntp-config.networks-allowed.label=Allowed networks
-ntp-config.networks-allowed.description= List of networks (comma delimited, CIDR-notation string, e.g. 192.168.0.1/16) \
-for which this server will accept NTP synchronization requests
-ntp-config.permit-sync.label=Permit time synchronization
-ntp-config.permit-sync.description= Permit time synchronization with our time source, but do not permit the source to query or modify the service on this system
-ntp-config.permit-loopback.label=Permit all access over the loopback interface
-ntp-config.drift-file.label=Drift file
-ntp-config.drift-file.description= When using a drift-file ntp will use the last written value as initial frequency correction after restart. \
-That way the best correction is set up much faster (Without a drift-file the initial frequency correction is always zero)
-ntp-unmanaged.label=Unmanaged Service
-ntp-unmanaged.unmanaged.label=Unmanaged NTP service
-ntp-unmanaged.unmanaged.description=Enable this option if you don't want NTP service to be managed by unified communication system \
-(for e.g. generating configuration, automatic restart of services).
-ntp-unmanaged.server-0.label=NTP server
-ntp-unmanaged.server-1.label=Additional NTP server
-ntp-unmanaged.server-2.label=Additional NTP server
-ntp-unmanaged.server-3.label=Additional NTP server
-ntp-sysconfig.label=Timezone
-ntp-sysconfig.timezone.label=Timezone
+ntp-config.server-1.label=Zus\u00E4tzlicher NTP server
+ntp-config.server-2.label=Zus\u00E4tzlicher NTP server
+ntp-config.server-3.label=Zus\u00E4tzlicher NTP server
+ntp-config.provide-time.label=Stelle Zeit f\u00FCr andere Systeme zur Verf\u00FCgung
+ntp-config.networks-allowed.label=Erlaubte Netzwerke
+ntp-config.networks-allowed.description=Liste der Netzwerke (durch Komma getrent, CIDR-notation string, z.B. 192.168.0.1/16) \
+f\u00FCr welche dieser Server NTP Synchronisations Anfragen annehmen wird.
+ntp-config.permit-sync.label=Erlaube Zeit Synchronisation
+ntp-config.permit-sync.description=Erlaube Zeit Synchronisation mit unserer Zeit Quelle, aber erlaube der Quelle nicht den Service auf diesem System zu ver\u00E4ndern oder abzufragen
+ntp-config.permit-loopback.label=Erlaube s\u00E4mtlichen Zugriff über das Loopback Interface
+ntp-config.drift-file.label=Drift Datei
+ntp-config.drift-file.description=Wenn eine Drift Datei verwendet wird, wird NTP den letzten geschrieben Wert als Initiator Frequenz Korrektur nach einem Neustart verwenden. \
+Auf diesem Weg ist die beste Korrektur um einiges schneller aufgesetzt (ohne eine Drift Datei ist Initial Frequenz Korrektur immer Null).
+ntp-unmanaged.label=Nicht verwalteter Service
+ntp-unmanaged.unmanaged.label=Nicht verwalteter NTP service
+ntp-unmanaged.unmanaged.description=Aktivieren Sie diese Option, wenn Sie den NTP Service nicht von Unified Communication System verwaltet haben wollen \
+(z.B. Konfiguration generieren, automatischer Neustart des Services).
+ntp-unmanaged.server-0.label=NTP Server
+ntp-unmanaged.server-1.label=Zus\u00E4tzlicher NTP server
+ntp-unmanaged.server-2.label=Zus\u00E4tzlicher NTP server
+ntp-unmanaged.server-3.label=Zus\u00E4tzlicher NTP server
+ntp-sysconfig.label=Zeitzone
+ntp-sysconfig.timezone.label=Zeitzone
