--- a/sipxpbx/openacd/sipxopenacd.properties
+++ b/sipxpbx/openacd/sipxopenacd.properties
@@ -1,29 +1,29 @@
 openacd-config.log_level.label=Log Level
 
-freeswitch_media_manager.label=FreeSWITCH Media Manager Configuration
+freeswitch_media_manager.label=FreeSWITCH Medien Manager Konfiguration
 
-freeswitch_media_manager.FREESWITCH_ENABLED.label=FreeSWITCH enabled
-freeswitch_media_manager.FREESWITCH_ENABLED.description=If enabled OpenACD will contact \
-	FreeSWITCH for calling agents registered on sipXecs
+freeswitch_media_manager.FREESWITCH_ENABLED.label=FreeSWITCH aktiviert
+freeswitch_media_manager.FREESWITCH_ENABLED.description=Wenn aktiviert, wird OpenACD \
+	FreeSWITCH kontaktieren um Agents,welche in SipXecs registriert sind, anzurufen.
 
 freeswitch_media_manager.C_NODE.label=C Node
-freeswitch_media_manager.C_NODE.description=Example: openacd@127.0.0.1
+freeswitch_media_manager.C_NODE.description=Beispiel: openacd@127.0.0.1
 
-freeswitch_media_manager.DIAL_STRING.label=Dial string
-freeswitch_media_manager.DIAL_STRING.description=Valid FreeSWITCH dialstring. Example: \
+freeswitch_media_manager.DIAL_STRING.label=Wahl Zeichenkette
+freeswitch_media_manager.DIAL_STRING.description=Gültige FreeSWITCH Wahl Zeichenkette. Beispiel: \
 	{ignore_early_media=true}sofia/mydomain.com/$1
 
-agent_configuration.label=Agent Configuration
+agent_configuration.label=Agent Konfiguration
 
-agent_configuration.DIALPLAN_LISTENER.label=Contact center TUI commands
-agent_configuration.DIALPLAN_LISTENER.description=Select this option to enable agent dial strings \
-	(like login, logout, go available, go released)
+agent_configuration.DIALPLAN_LISTENER.label=Kontakt center TUI Kommandos
+agent_configuration.DIALPLAN_LISTENER.description=W\u00E4hlen Sie diese Option aus um Agent Wahlzeichen zu aktivieren \
+	(wie login, logout, Verfügbar schalten, Abwesend schalten)
 
-openacd-config.agent-webui-enabled.label=Enable agent web UI
-openacd-config.agent-webui-enabled.description=Enable the native OpenACD agent web UI
-openacd-config.agent-webui-port.label=Agent web UI port
-openacd-config.agent-webui-port.description=HTTP port on which agent web UI can be accessed	
-openacd-config.agent-webui-sslenabled.label=Enable ssl for the agent web UI
-openacd-config.agent-webui-sslenabled.description=Enable secure access to the agent web UI
-openacd-config.agent-webui-sslport.label=Secure port for the agent web UI
-openacd-config.agent-webui-sslport.description=Secure port for the agent web UI
+openacd-config.agent-webui-enabled.label=Aktiviere Agent Web UI
+openacd-config.agent-webui-enabled.description=Aktiviere die eigene OpenACD Agent Web UI
+openacd-config.agent-webui-port.label=Agent Web UI Port
+openacd-config.agent-webui-port.description=HTTP Port, auf welchem das Agent Web UI gefunden werden kann	
+openacd-config.agent-webui-sslenabled.label=Aktiviere SSL für das Agent Web UI
+openacd-config.agent-webui-sslenabled.description=Aktiviere Sicheren Zugang zu dem Agent Web UI
+openacd-config.agent-webui-sslport.label=Sicherer Port für das Agent Web UI
+openacd-config.agent-webui-sslport.description=Sicherer Port für das Agent Web UI
