--- a/sipxpbx/sipxdns/sipxdns.properties
+++ b/sipxpbx/sipxdns/sipxdns.properties
@@ -1,20 +1,20 @@
 named-config.label=DNS Service
-named-config.forwarders.label=Forwarders
-named-config.forwarders.description=Company or ITSP DNS servers to resolve names OUTSIDE it's domain
-named-config.forwarders.forwarder_0.label=Primary External DNS server
-named-config.forwarders.forwarder_0.description=DNS server in your company or your ITSP. Can also be a publicly available DNS server like 8.8.8.8.
-named-config.forwarders.forwarder_1.label=Secondary External DNS server
-named-config.forwarders.forwarder_1.description=In the event the primary DNS server is unavailable, system will use this server.
-named-config.forwarders.forwarder_2.label=Additional External DNS server
-named-config.forwarders.forwarder_3.label=Additional External DNS server
-named-config.forwarders.forwarder_4.label=Additional External DNS server
-sys.label=Configuration Control
-sys.unmanaged.label=Unmanaged Service
-sys.unmanaged.description=Company or ITSP DNS servers to resolve ALL names instead of local DNS servers.
-sys.unmanaged_servers.label=Unmanaged
-sys.unmanaged_servers.unmanaged_0.label=Primary Unmanaged DNS server
-sys.unmanaged_servers.unmanaged_0.description=DNS server in your company or your ITSP. Can also be a publicly available DNS server like 8.8.8.8.
-sys.unmanaged_servers.unmanaged_1.label=Secondary Unmanaged DNS server
-sys.unmanaged_servers.unmanaged_1.description=In the event the primary DNS server is unavailable, system will use this server.
-sys.unmanaged_servers.unmanaged_2.label=Additional Unmanaged DNS server
-sys.unmanaged_servers.unmanaged_3.label=Additional Unmanaged DNS server
+named-config.forwarders.label=Weiterleiter
+named-config.forwarders.description=Firmen oder ITSP DNS Servers um Namen aufzul\u00F6sen auserhalb der Domain
+named-config.forwarders.forwarder_0.label=Prim\u00E4rer Externer DNS Server
+named-config.forwarders.forwarder_0.description=DNS Server in Ihrer Firma oder Ihres ITSP. Kann auch ein \u00F6ffentlich verf\u00FCgbarer DNS Server sein wie 8.8.8.8.
+named-config.forwarders.forwarder_1.label=Sekund\u00E4rer Externer DNS Server
+named-config.forwarders.forwarder_1.description=Gesetz des Falles, dass der prim\u00E4re DNS Server nicht verf\u00FCgbar ist, wird das System diesen Server nutzen.
+named-config.forwarders.forwarder_2.label=Zus\u00E4tzlicher externer DNS Server
+named-config.forwarders.forwarder_3.label=Zus\u00E4tzlicher externer DNS Server
+named-config.forwarders.forwarder_4.label=Zus\u00E4tzlicher externer DNS Server
+sys.label=Konfigurations Kontrolle
+sys.unmanaged.label=Nicht verwalteter Service
+sys.unmanaged.description=Firmen- oder ITSP DNS Server um alle Namen aufzul\u00F6sen, anstatt dem lokalen DNS Server.
+sys.unmanaged_servers.label=Nicht verwaltet
+sys.unmanaged_servers.unmanaged_0.label=Prim\u00E4rer Nicht verwalteter DNS Server
+sys.unmanaged_servers.unmanaged_0.description=DNS Server in Ihrer Firma oder ITSP. Kann auch ein \u00F6ffentlich verf\u00FCgbarer DNS Server sein wie 8.8.8.8.
+sys.unmanaged_servers.unmanaged_1.label=Sekund\u00E4rer nicht verwalteter DNS Server
+sys.unmanaged_servers.unmanaged_1.description=Gesetz des Falles, dass der prim\u00E4re DNS Server nicht verf\u00FCgbar ist, wird das System diesen Server nutzen
+sys.unmanaged_servers.unmanaged_2.label=Zus\u00E4tzlicher nicht verwalteter DNS Server
+sys.unmanaged_servers.unmanaged_3.label=Zus\u00E4tzlicher nicht verwalteter DNS Server
