--- a/sipxpbx/sipxregistrar/sipxregistrar.properties
+++ b/sipxpbx/sipxregistrar/sipxregistrar.properties
@@ -1,64 +1,65 @@
-userparam.label=User Parameters
-userparam.SIP_REDIRECT.090-USERPARAM.STRIP_ALL.label=Strip User Parameters
-userparam.SIP_REDIRECT.090-USERPARAM.STRIP_ALL.description=Remove all semicolon-delimited parameters from the userpart of local SIP addresses.  For example, convert 'sip:user;phone-context=xyz@example.com' to 'sip:user@example.com' when the local domain is 'example.com'.
+userparam.label=Benutzer Parameter
+userparam.SIP_REDIRECT.090-USERPARAM.STRIP_ALL.label=Benutzer Parameter beschneiden
+userparam.SIP_REDIRECT.090-USERPARAM.STRIP_ALL.description=Alle mit Semikolon abgegrenzten Parameter vom Benutzerteil der lokalen SIP Adresse entfernen. Zum Beispiel wird 'sip:user;phone-context=xyz@example.com' in 'sip:user@example.com' umgewandelt. wenn die lokale Dom\u00E4ne 'example.com' ist.
 
-isn.label=ISN Dialing
+isn.label=ISN W\u00E4hlen
 
-isn.SIP_REDIRECT.150-ISN.BASE_DOMAIN.label=ISN dialing
-isn.SIP_REDIRECT.150-ISN.BASE_DOMAIN.description=Enable ISN (ITAD Subscriber Number) dialing. ISN dialing allows routing of calls over the Internet \
- and around the PSTN by providing support for domain-based "Internet-style" numbers (ITAD numbers). E.g. to reach the Free World Dialup (ITAD 262) \
- echo test service at extension 613 you can dial 613*262 from the phone's dialpad without having to enter a full SIP URI. \
- A free ITAD number can be obtained for your domain from www.freenum.org. A list of already assigned ITAD numbers is also available there.
+isn.SIP_REDIRECT.150-ISN.BASE_DOMAIN.label=ISN w\u00E4hlen
+isn.SIP_REDIRECT.150-ISN.BASE_DOMAIN.description=ISN (ITAD Subscriber Number) W\u00E4hlen einschalten. ISN W\u00E4hlen erlaubt das Routen von Anrufen über das Internet \
+und rund um das PSTN indem es Unterst\u00FCtzung für Domain-basierte "Internet-Style" Nummern (ITAD Nummern) bietet. Z.B. um das Free World Dialup (ITAD 262) \
+Echo Test Dienst an der Nebenstelle 613 zu nutzen, k\u00F6nnen Sie 613*262 vom Ziffernblock des Telefons w\u00E4hlen, ohne eine komplette SIP URI eingeben zu m\u00FCssen. \
+Eine kostenlose ITAD Nummer f\u00FCr Ihre Domain kann unter www.freenum.org bezogen werden. Eine Liste von bereits zugewiesenen ITAD Nummern ist außerdem dort erh\u00E4ltlich.
+
 
 isn.SIP_REDIRECT.150-ISN.PREFIX.label=ISN prefix
-isn.SIP_REDIRECT.150-ISN.PREFIX.description=Optional prefix for ISN numbers.
+isn.SIP_REDIRECT.150-ISN.PREFIX.description=Optionaler Pr\u00E4fix für ISN Nummern.
 
-enum.label=ENUM Dialing
-enum.description=ENUM unifies E.164 telephone numbering system with DNS. E.164 number entered by the user \
-	is translated into domain string, which is subsequently resolved through reverse DNS lookup. \
-	PBX will use access information retrieved from DNS to terminate the call. Free registrations of PSTN numbers are \
-        available from e164.org.
+enum.label=ENUM W\u00E4hlen
+enum.description=ENUM vereinheitlicht das E.164 Telefonnummernsystem DNS. Die vom Benutzer eingegebene E.164 Nummer \
+	wird in einen Domain String \u00FCbersetzt, welche anschließend durch Reverse DNS lookup aufgel\u00F6st werden. \
+	Die PBX verwendet vom DNS erhaltene Zugangsinformation um den Anruf zu terminieren. Kostenlose Registrierungen von PSTN Nummern sind auf \
+	e164.org very<
 
-enum.SIP_REDIRECT.160-ENUM.BASE_DOMAIN.label=Base domain
-enum.SIP_REDIRECT.160-ENUM.BASE_DOMAIN.description=Domain name of the ENUM tree, for example 'e164.arpa' or 'e164.org'. \
-	If base domain is empty ENUM dialing is disabled.
+enum.SIP_REDIRECT.160-ENUM.BASE_DOMAIN.label=Base Domain
+enum.SIP_REDIRECT.160-ENUM.BASE_DOMAIN.description=Domainname des ENUM Baums, zum Beispiel 'e164.arpa' oder 'e164.org'. \
+	Wenn die Base Domain leer ist wird das ENUM Wählen abgeschaltet.
 
 enum.SIP_REDIRECT.160-ENUM.DIAL_PREFIX.label=Drop prefix
-enum.SIP_REDIRECT.160-ENUM.DIAL_PREFIX.description=Prefix used to identify ENUM dialing pattern. It is dropped before constructing ENUM URI.
+enum.SIP_REDIRECT.160-ENUM.DIAL_PREFIX.description=Prefix, welches benutzt wird um die ENUM Wahl Vorlage zu identifizieren. Es wird gel\u00F6scht, bevor ENUM URI konstruiert wird.
 
-enum.SIP_REDIRECT.160-ENUM.ADD_PREFIX.label=Add prefix
-enum.SIP_REDIRECT.160-ENUM.ADD_PREFIX.description=Prefix added to dialed number before creating enum URI
+enum.SIP_REDIRECT.160-ENUM.ADD_PREFIX.label=F\u00FCge prefix hinzu
+enum.SIP_REDIRECT.160-ENUM.ADD_PREFIX.description=Prefix, welches zu der gew\u00E4hlten Nummer hinzugef\u00FCgt wird, bevor der ENUM URI Teil konstruiert wird
 
-enum.SIP_REDIRECT.160-ENUM.PREFIX_PLUS.label=Use external numbers
-enum.SIP_REDIRECT.160-ENUM.PREFIX_PLUS.description=Uncheck if you are using private ENUM tree.
+enum.SIP_REDIRECT.160-ENUM.PREFIX_PLUS.label=Benutze externe Nummern
+enum.SIP_REDIRECT.160-ENUM.PREFIX_PLUS.description=Demarkiere, falls Sie einen privaten ENUM Baum benutzen.
 
-call-pick-up.label=Call Pickup
+call-pick-up.label=Anruf Annahme
 
-call-pick-up.SIP_REDIRECT.100-PICKUP.DIRECTED_CALL_PICKUP_CODE.label=Directed call pickup code
-call-pick-up.SIP_REDIRECT.100-PICKUP.DIRECTED_CALL_PICKUP_CODE.description=Code to dial to pick up a ringing call on a specific phone. To pick up extension 123, dial \
- this code followed by 123.
+call-pick-up.SIP_REDIRECT.100-PICKUP.DIRECTED_CALL_PICKUP_CODE.label=gezielter Anruf Aufnahme Code
+call-pick-up.SIP_REDIRECT.100-PICKUP.DIRECTED_CALL_PICKUP_CODE.description=Code, der gew\u00E4hlt werden muss um einen klingelnden Anruf auf einem bestimmten Telefon entgegenzunehmen. Um Erweiterung 123 anzunehmen, \
+ w\u00E4hlen Sie diesen Code, gefolgt von 123.
 
-call-pick-up.SIP_REDIRECT.100-PICKUP.CALL_RETRIEVE_CODE.label=Call park retrieve code
-call-pick-up.SIP_REDIRECT.100-PICKUP.CALL_RETRIEVE_CODE.description=Code to dial to retrieve a parked call. Dial this code followed by a call park extension \
- to pick up a parked call.
+call-pick-up.SIP_REDIRECT.100-PICKUP.CALL_RETRIEVE_CODE.label=Empfange geparkten Anruf Code
+call-pick-up.SIP_REDIRECT.100-PICKUP.CALL_RETRIEVE_CODE.description=Code, der gew\u00E4hlt werden muss um einen geparkten Anruf entgegenzunehmen. W\u00E4hlen Sie diesen Code, gefolgt von einer Anrufpark Erweiterung \
+ um einen geparkten Anruf entgegenzunehmen.
 
-call-pick-up.SIP_REDIRECT.100-PICKUP.CALL_PICKUP_WAIT.label=Call pickup timeout
-call-pick-up.SIP_REDIRECT.100-PICKUP.CALL_PICKUP_WAIT.description=Number of seconds that the original call will ring after the pickup code is dialed.
+call-pick-up.SIP_REDIRECT.100-PICKUP.CALL_PICKUP_WAIT.label=Anrufannahme Timeout
+call-pick-up.SIP_REDIRECT.100-PICKUP.CALL_PICKUP_WAIT.description=Sekunden, die der eigentliche Anruf klingelt, nachdem der Annahme Code gew\u00E4hlt wurde.
 
-call-pick-up.SIP_REDIRECT.100-PICKUP.PICKUP_1_SEC_SUBSCRIBE.label=Pickup 1 second subscribtion
-call-pick-up.SIP_REDIRECT.100-PICKUP.PICKUP_1_SEC_SUBSCRIBE.description=The parameter for activating the "1 second subscription" workaround.
-call-pick-up.SIP_REDIRECT.100-PICKUP.PICKUP_REVERSED_REPLACES.label=Pickup Reversed Replaces
-call-pick-up.SIP_REDIRECT.100-PICKUP.PICKUP_REVERSED_REPLACES.description=The parameter for activating the "reversed Replaces" workaround.
-call-pick-up.SIP_REDIRECT.100-PICKUP.PICKUP_NO_EARLY_ONLY.label=Pickup No Early
-call-pick-up.SIP_REDIRECT.100-PICKUP.PICKUP_NO_EARLY_ONLY.description=The parameter for activating the "no early-only" workaround.
-call-pick-up.SIP_REDIRECT.100-PICKUP.GLOBAL_CALL_PICKUP_CODE.label=Global Pickup Code
-call-pick-up.SIP_REDIRECT.100-PICKUP.GLOBAL_CALL_PICKUP_CODE.description=The parameter giving the global call pick-up feature code.
+call-pick-up.SIP_REDIRECT.100-PICKUP.PICKUP_1_SEC_SUBSCRIBE.label=Annahme nach 1 Sekunde
+call-pick-up.SIP_REDIRECT.100-PICKUP.PICKUP_1_SEC_SUBSCRIBE.description=Der Parameter um die "1 second subscription" L\u00F6sung anzuwenden.
+call-pick-up.SIP_REDIRECT.100-PICKUP.PICKUP_REVERSED_REPLACES.label=Annahme Reversed Replaces
+call-pick-up.SIP_REDIRECT.100-PICKUP.PICKUP_REVERSED_REPLACES.description=Der Parameter um die "reversed Replaces"Lösung zu aktivieren.
+call-pick-up.SIP_REDIRECT.100-PICKUP.PICKUP_NO_EARLY_ONLY.label=Annahme No Early
+call-pick-up.SIP_REDIRECT.100-PICKUP.PICKUP_NO_EARLY_ONLY.description=Der Parameter um die "no early-only" L\u00F6sung zu aktivieren.
+call-pick-up.SIP_REDIRECT.100-PICKUP.GLOBAL_CALL_PICKUP_CODE.label=Globaler Annahme Code
+call-pick-up.SIP_REDIRECT.100-PICKUP.GLOBAL_CALL_PICKUP_CODE.description=Der Parameter, welcher den globalen Anruf Anahme Code vergibt.
 
 
 registrar-config.SIP_REGISTRAR_LOG_LEVEL.label=Logging Level
-registrar-config.SIP_REGISTRAR_LOG_LEVEL.description=Handling of phones registering for calls.
+registrar-config.SIP_REGISTRAR_LOG_LEVEL.description=Handhabung von Telefonen, die sich für einen Anruf registrieren.
 
-registrar-config.label=Registrar Config
+registrar-config.label=Registrar Konfiguration
 
 registrar-config.SIP_REGISTRAR_TCP_PORT.label=TCP Port
 registrar-config.SIP_REGISTRAR_TCP_PORT.description=
@@ -70,20 +71,20 @@ registrar-config.SIP_REGISTRAR_XMLRPC_PORT.label=XMLRPC Port
 registrar-config.SIP_REGISTRAR_XMLRPC_PORT.description=
 registrar-config._SIP_REGISTRAR_PRESENCE_PORT.label=Presence Port
 registrar-config._SIP_REGISTRAR_PRESENCE_PORT.description=
-registrar-config.SIP_REGISTRAR_AUTHENTICATE_ALGORITHM.label=Authentication Algorithm
-registrar-config.SIP_REGISTRAR_AUTHENTICATE_ALGORITHM.description=Authentication algorithm used in communication.
+registrar-config.SIP_REGISTRAR_AUTHENTICATE_ALGORITHM.label=Authentifizierungs Algorithmus
+registrar-config.SIP_REGISTRAR_AUTHENTICATE_ALGORITHM.description=Authentifizierungs Algorithmus, welcher in Kommunikation benutzt wird.
 registrar-config.SIP_REGISTRAR_LOG_CONSOLE.label=Log Console
 registrar-config.SIP_REGISTRAR_LOG_CONSOLE.description=
-registrar-config.SIP_REGISTRAR_MAX_EXPIRES_NORMAL.label=Maximum Expires
-registrar-config.SIP_REGISTRAR_MAX_EXPIRES_NORMAL.description=Maximum number of seconds after which the registration expires.
-registrar-config.SIP_REGISTRAR_MIN_EXPIRES_NORMAL.label=Minimum Expires
-registrar-config.SIP_REGISTRAR_MIN_EXPIRES_NORMAL.description=Minimum number of seconds after which the registration expires.
-registrar-config.SIP_REGISTRAR_MAX_EXPIRES_NATED.label=Max Expires Behind NAT
-registrar-config.SIP_REGISTRAR_MAX_EXPIRES_NATED.description=Maximum number of seconds after which the registration expires when behind NAT.
-registrar-config.SIP_REGISTRAR_MIN_EXPIRES_NATED.label=Min Expires Behind NAT
-registrar-config.SIP_REGISTRAR_MIN_EXPIRES_NATED.description=Minimum number of seconds after which the registration expires when behind NAT.
+registrar-config.SIP_REGISTRAR_MAX_EXPIRES_NORMAL.label=Maximales Ablaudfdatum
+registrar-config.SIP_REGISTRAR_MAX_EXPIRES_NORMAL.description=Maximale Anzahl an Sekunden, nach der die Registrierung des Telefons ung\u00FCltig wird.
+registrar-config.SIP_REGISTRAR_MIN_EXPIRES_NORMAL.label=Minimales Ablaufdatum
+registrar-config.SIP_REGISTRAR_MIN_EXPIRES_NORMAL.description=Maximale Anzahl an Sekunden, nach der die Registrierung des Telefons ung\u00FCltig wird..
+registrar-config.SIP_REGISTRAR_MAX_EXPIRES_NATED.label=Maximales Ablaufdatum hinter NAT
+registrar-config.SIP_REGISTRAR_MAX_EXPIRES_NATED.description=Maximale Anzahl an Sekunden, nachdem die Registrierung hinter einem NAT ung\u00FCltig wird.
+registrar-config.SIP_REGISTRAR_MIN_EXPIRES_NATED.label=Minimales Ablaufdatum hinter NAT
+registrar-config.SIP_REGISTRAR_MIN_EXPIRES_NATED.description=Minimale Anzahl an Sekunden, nachdem die Registrierung hinter einem NAT ung\u00FCltig wird.
 registrar-config.SIP_REGISTRAR.MWI.UA.CISCO.label=
 registrar-config.SIP_REGISTRAR.MWI.UA.CISCO.description=
-registrar-config.SIP_REDIRECT.140-FALLBACK.ALLOW_UNBOUND.label=Allow Unbound
-registrar-config.SIP_REDIRECT.140-FALLBACK.ALLOW_UNBOUND.description=If checked, applications that know the shared secret will be allowed to make external calls
+registrar-config.SIP_REDIRECT.140-FALLBACK.ALLOW_UNBOUND.label=Erlaube ungebunden
+registrar-config.SIP_REDIRECT.140-FALLBACK.ALLOW_UNBOUND.description=Wenn aktiviert, wird es Applikationen, die das shared secret kennen, erlaubt externe Anrufe durchzuf\u00FChren
 
