--- a/sipxpbx/sipxrest/sipxrest.properties
+++ b/sipxpbx/sipxrest/sipxrest.properties
@@ -1,9 +1,9 @@
-rest-config.label=Rest Server configuration
+rest-config.label=Rest Server Konfiguration
 
 rest-config.httpPort.label=Http Port
 #rest-config.httpsPort.description=
 
-rest-config.publicHttpPort.label=Public Http Port
+rest-config.publicHttpPort.label=\u00F6ffentlicher Http Port
 #rest-config.extHttpPort.description=
 
 rest-config.sipPort.label=Sip Port
