--- a/sipxpbx/sipxwebsocket/sipxwebsocket.properties
+++ b/sipxpbx/sipxwebsocket/sipxwebsocket.properties
@@ -1,3 +1,3 @@
-websocket.label=Event Notifier Parameters
+websocket.label=Event Benachrichtigungsservice
 websocket.log.level.label=Logging Level
 websocket.websocket.port.label=WSS Port
