--- a/sipxpbx/snmp/snmp.properties
+++ b/sipxpbx/snmp/snmp.properties
@@ -1,3 +1,3 @@
-cfdat.label=Configuration
-cfdat.fix_dead_processes.label=Restart dead processes
-cfdat.fix_dead_processes.description=Local SNMP server will automatically restart services that are supposed to be running but currently are not running. 
+cfdat.label=Konfiguration
+cfdat.fix_dead_processes.label=Starte tote Prozesse neu
+cfdat.fix_dead_processes.description=Der lokale SNMP Server wird automatisch Services neustarten, die eigentlich laufen sollten, aber aktuell nicht laufen. 
