--- a/sipxpbx/tunnel/tunnel.properties
+++ b/sipxpbx/tunnel/tunnel.properties
@@ -1,7 +1,7 @@
-config.label = Encrypted Communication
+config.label = Verschl\u00FCsselte Kommunikation
 config.debug.label = Log Level
-config.debug.description = The higher the value, the more the logging output
-config.server_start_port.label = Incoming starting port
-config.server_start_port.description = Sockets will be open for incoming, encrypted traffic starting at the port 
-config.server_start_port.label = Outgoing starting port
-config.client_start_port.description = Sockets will be open for outgoing, encrypted traffic starting at the port
+config.debug.description = Desto h\u00F6her der Wert, desto mehr ist die logging Ausgabe
+config.server_start_port.label = Eingehender Start Port
+config.server_start_port.description = Sockets werden für eingehenden, verschl\u00FCsselten Verkehr offen sein ab dem Port 
+config.server_start_port.label = Abgehender Start Port
+config.client_start_port.description = Sockets werden für ausgehenden, verschl\u00FCsselten Verkehr offen sein ab dem Port 
