--- a/sipxpbx/unmanaged/services.properties
+++ b/sipxpbx/unmanaged/services.properties
@@ -1,7 +1,7 @@
-services.ntp.unmanaged.label=Unmanaged NTP service
-services.ntp.unmanaged.description=Enable this option if you don't want NTP service to be managed by unified communication system \
-(for e.g. generating configuration, automatic restart of services).
+services.ntp.unmanaged.label=Nicht verwalteter NTP service
+services.ntp.unmanaged.description=Aktivieren Sie diese Option, falls Sie nicht wollen, dass der NTP Service von Unified Communication System verwaltet wird \
+(Z.B. Konfigurationen erstellen, automatischer Neustart von Services).
 services.ntp.0.label=NTP server
-services.ntp.1.label=Additional NTP server
-services.ntp.2.label=Additional NTP server
-services.ntp.3.label=Additional NTP server
+services.ntp.1.label=Zus\u00E4tzlicher NTP server
+services.ntp.2.label=Zus\u00E4tzlicher NTP server
+services.ntp.3.label=Zus\u00E4tzlicher NTP server
