--- a/sipxpbx/sipxsqa/sipxsqa.properties
+++ b/sipxpbx/sipxsqa/sipxsqa.properties
@@ -1,7 +1,7 @@
-sqa-config.label=Network Queue Configuration
+sqa-config.label=Netzwerk Warteschlangen Konfiguration
 sqa-config.log-level.label=Logging Level
-sqa-config.sqa-control-port.label=Control Port
-sqa-config.zmq-subscription-port.label=Queue Port
+sqa-config.sqa-control-port.label=Kontroll Port
+sqa-config.zmq-subscription-port.label=Warteschlangen Port
 type.loglevel.0=EMERG
 type.loglevel.1=ALERT
 type.loglevel.2=CRIT
