--- a/sipxpbx/sipxconfig/admin.properties
+++ b/sipxpbx/sipxconfig/admin.properties
@@ -1,20 +1,20 @@
-configserver-config.label=Administration Configuration 
-configserver-config.externalAliases.aliasAddins.label=External Aliases File
-configserver-config.externalAliases.aliasAddins.description=File of a very specific format that will dynamically add aliases to you system.
-configserver-config.mappingRules.externalRulesFileName.label=External Mapping Rules File
-configserver-config.mappingRules.externalRulesFileName.description=File of a very specific format that will be dynamically added to dial plan.
-configserver-config.fallbackRules.externalRulesFileName.label=External Fall-back Rules File
-configserver-config.fallbackRules.externalRulesFileName.description=File of a very specific format that will be dynamically added to dial plan when all other rules to not match.
-configserver-config.replicationManagerImpl.nThreads.label=Replication parallel threads
-configserver-config.replicationManagerImpl.nThreads.description=Number of parallel threads processing heavy replication operations (e.g. sending profiles on a server with a large number of users).
-configserver-config.replicationManagerImpl.pageSize.label=Page size
-configserver-config.replicationManagerImpl.pageSize.description=Maximum number of entities processed by a thread.
-configserver-config.replicationManagerImpl.useDynamicPageSize.label=Use Dynamic Page Size
-configserver-config.replicationManagerImpl.useDynamicPageSize.description=If true each thread will divide the processed entities.(e.g. 10.000 users on 4 threads - each thread will process 2500 users.)
-configserver-config.password-policy.label=Password Policy
-configserver-config.password-policy.description=When user is created, password and vm pin can be either blank (Empty policy) or \
-  automatically have default values from below (Default values policy)
-configserver-config.password-default.label=Default Password
-configserver-config.password-default.description=Default value for password that is automatically set when user is created
+configserver-config.label=Administrations Konfiguration
+configserver-config.externalAliases.aliasAddins.label=Externe Alias Datei
+configserver-config.externalAliases.aliasAddins.description=Datei in einem sehr speziellen Format, welche dynamisch Alias zu Ihrem System hinzufügt.
+configserver-config.mappingRules.externalRulesFileName.label=Externe Mapping Regeln Datei
+configserver-config.mappingRules.externalRulesFileName.description=Datei in einem sehr speziellen Format, welches automatisch zum Anruf Plan hinzugefügt wird.
+configserver-config.fallbackRules.externalRulesFileName.label=Externe Rückfall Regeln Datei
+configserver-config.fallbackRules.externalRulesFileName.description=Datei in einem sehr speziellen Format, welches automatisch zum Anruf Plan hinzugefügt wird, falls alle anderen Regeln nicht passen.
+configserver-config.replicationManagerImpl.nThreads.label=Replikation paralleler Threads
+configserver-config.replicationManagerImpl.nThreads.description=Nummer der parallelen threads, welche gerade schwere Replikations Aufgaben erledigen (z.B. Profile eines Server senden, mit einer hohen Anzahl an Benutzern).
+configserver-config.replicationManagerImpl.pageSize.label=Seiten Größe
+configserver-config.replicationManagerImpl.pageSize.description=Maximale Anzah an Entitäten, die von einen thread bearbeitet werden.
+configserver-config.replicationManagerImpl.useDynamicPageSize.label=Verwende dynamische Seitengröße
+configserver-config.replicationManagerImpl.useDynamicPageSize.description=Wenn Wahr wird jeder Thread die bearbeitenden Entitäten aufteilen.(z.B. 10.000 Benutzer mit 4 threads - jeder Thread wird 2500 Benutzer bearbeiten.)
+configserver-config.password-policy.label=Passwort Regeln
+configserver-config.password-policy.description=Wenn ein Benutzer angelegt wird, kann das Passwort und die Voicemail Pin entweder leer sein (Leere Regel) oder \
+  einen automatischen Wert von unten haben (Default Werte Regel)
+configserver-config.password-default.label=Default Passwort
+configserver-config.password-default.description=Default Wert, welcher automatisch gewählt wird, wenn ein Benutzer erstellt wird
 configserver-config.vmpin-default.label=Default Voicemail Pin
-configserver-config.vmpin-default.description=Default value for voicemail pin that is automatically set when user is created
+configserver-config.vmpin-default.description=Default Wert für Voicemails PINs, welcher automatisch gewählt wird, wenn ein Benutzer erstellt wird
